# MangaNeko

./: .gitmodules  CMakeLists.txt  README.md
config/: config.json
source/: main.cpp
source/controllers/: TestCtrl.cc  manga.cc  manga.h
source/utils/: bit7zipLibrarySingleton.h  config.h
